Bugfix: jumping info popup in text annotation mode

--- a/app/assets/stylesheets/annotation/text.less
+++ b/app/assets/stylesheets/annotation/text.less
@@ -4,14 +4,14 @@
 
 @import "_editor.less";
 
-html, body { position:relative; } /* See http://bugs.jqueryui.com/ticket/9315 */
+html, body { position:relative } /* See http://bugs.jqueryui.com/ticket/9315 */
 
 #text {
   padding:180px 60px 90px 60px;
   font-size:17px;
   line-height:1.65em;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    
+
   .annotation {
     background-color:#bbb;
     border-bottom:1px dotted #333;
@@ -32,7 +32,7 @@ html, body { position:relative; } /* See http://bugs.jqueryui.com/ticket/9315 */
     background-color:#f2ee00;
     border-bottom:1px dotted #99940b;
   }
-  
+
   .annotation.highlighted {
     box-shadow: 0px 0px 10px 2px #ffaa00;
   }
@@ -57,7 +57,7 @@ html, body { position:relative; } /* See http://bugs.jqueryui.com/ticket/9315 */
   -webkit-box-shadow:1px 1px 20px 8px rgba(0, 0, 0, 0.4);
   box-shadow:1px 1px 20px 8px rgba(0, 0, 0, 0.4);
   z-index:9999;
-  
+
   .header {
     .gradient(#5a5a5a, #4f4f4f);
     font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
@@ -70,7 +70,7 @@ html, body { position:relative; } /* See http://bugs.jqueryui.com/ticket/9315 */
     border-style:solid;
     border-color:#6f6f6f;
   }
-  
+
   .body {
     text-align:center;
     padding:0px 10px;
@@ -78,11 +78,11 @@ html, body { position:relative; } /* See http://bugs.jqueryui.com/ticket/9315 */
     border-style:solid;
     border-color:#c2c2c2;
     font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
-    
+
     .selection {
       font-size:17px;
     }
-    
+
     .message {
       display:block;
       font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
@@ -90,11 +90,11 @@ html, body { position:relative; } /* See http://bugs.jqueryui.com/ticket/9315 */
       padding:10px 5px;
       line-height:140%;
     }
-    
+
     .buttons {
       text-align:center;
       padding:5px 15px 15px 15px;
     }
   }
-  
+
 }
